homework for lesson-1

--- a/lesson1/答题卡.md
+++ b/lesson1/答题卡.md
@@ -8,23 +8,24 @@
 
 - Substrate的官方文档网址是什么？
 
+  https://www.substrate.io/
   
 
 - Substrate的recipe网址是什么？
 
-  
+  https://substrate.dev/recipes/
 
 - Substrate的rust docs的网址是什么？
 
-  
+  https://substrate.dev/rustdocs/v2.0.0-rc2/sc_service/index.html
 
 - Substrate的tutorial的网址是什么？
 
-  
+  https://www.substrate.io/tutorials/
 
 - Substrate Seminar在每周几进行？
 
-
+  Tuesday
 
 
 
@@ -33,12 +34,15 @@
 **github的基本操作，养成良好的开源社区开发习惯**
 
 - star和watch substrate和polkadot的repo，并截屏
+  ![-w1133](media/15910728463351.jpg)
 
-  
+  ![-w1130](media/15910728939763.jpg)
 
 - fork substrate到自己的repo，并给自己的repo提一个issue和PR，并截屏
 
+  ![-w713](media/15910734961485.jpg)
 
+  ![-w524](media/15910739165397.jpg)
 
 
 
@@ -46,9 +50,16 @@
 
 **请编译第一节课中的node-template并截图编译成功的界面** (node-template链接： https://github.com/SubstrateCourse/substrate-node-template.git)
 
+![-w855](media/15910751913953.jpg)
 
 
 #### 第四题
 
 **请运行node-template节点并截图 ，单节点和多节点分别截图（ (node-template链接： https://github.com/SubstrateCourse/substrate-node-template.git)）**
+
+- single-node
+![-w939](media/15910755648798.jpg)
+
+- multi-node
+![-w954](media/15910762263964.jpg)
 
